// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package infra;

option go_package = "./;infrapb";
import "google/protobuf/timestamp.proto";

message Error {
    int32 code = 1;
    string errorMessage = 2;
    string serverity = 3;
}

message AwsRole {
    string role_arn = 1; // AWS: Role ARN
    string role_session_name = 2; // AWS: Session Name
    int32 duration_seconds = 3; // Optional: Session duration in seconds
}

message GcpRole {
    string service_account = 1; // GCP: Service Account Email
}

message AzureRole {
    string managed_identity = 1; // Azure: Managed Identity Client ID
}

message RoleBasedAuth {
    oneof role {
        AwsRole aws_role = 1;
        GcpRole gcp_role = 2;
        AzureRole azure_role = 3;
    }
}

message AwsUserAuth {
    string access_key_id = 1; // AWS: Access Key ID
    string secret_access_key = 2; // AWS: Secret Access Key
    string session_token = 3; // Optional: Session Token for temporary credentials
}

message GcpUserAuth {
    oneof auth_method {
        string api_key = 1; // GCP: API Key
        string json_key = 2; // GCP: Service Account JSON key file content
    }
}

message AzureUserAuth {
    string client_id = 1; // Azure: Client ID
    string client_secret = 2; // Azure: Client Secret
    string tenant_id = 3; // Azure: Tenant ID
    string certificate_path = 4; // Optional: Path to certificate file for certificate-based auth
}

message UserBasedAuth {
    oneof user_auth {
        AwsUserAuth aws_user_auth = 1;
        GcpUserAuth gcp_user_auth = 2;
        AzureUserAuth azure_user_auth = 3;
    }
}

message Credentials {
    oneof auth {
        RoleBasedAuth role_based_auth = 1;
        UserBasedAuth user_based_auth = 2;
    }
}

message VPC {
    string id = 1;
    string name = 2;
    string region = 3;
    map<string, string> labels = 4;
    string ipv4_cidr = 5;
    string ipv6_cidr = 6;
    string project = 7;
    string provider = 10;
    string account_id = 11;
    string last_sync_time = 12;
    string self_link = 13;
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
}

message Instance {
    string provider = 1;
    string account_id = 2;
    string id = 3;
    string name = 4;
    string subnetID = 5;
    string project = 6;
    string vpcId = 7;
    string region = 8;
    string zone = 9;
    string publicIP = 10;
    string privateIP = 11;
    repeated string securityGroupIds = 12;
    repeated string interfaceIds = 13;
    string state = 14;
    string type = 15;
    map<string, string> labels = 16;
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
    string last_sync_time = 19;
    string self_link = 20;
}

message Subnet {
    string id = 1;
    string name = 2;
    string cidr_block = 3;
    string vpc_id = 4;
    string zone = 5;
    string region = 6;
    map<string, string> labels = 7;
    string project = 8;
    string provider = 10;
    string account_id = 11;
    string last_sync_time = 12;
    string self_link = 13;  
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
}

message Account {
    string provider = 1;
    string id = 2;
    string name = 3;
    string last_sync_time = 4;
}
message Region {
    string provider = 1;
    string id = 2;
    string name = 3;
    string last_sync_time = 4;
}

message ACL {
    string provider = 1;
    string id = 2;
    string name = 3;
    string vpc_id = 4;
    string region = 5;
    string account_id = 6;
    message ACLRule {
        int32 number = 1;
        string protocol = 2;
        string port_range = 3;
        repeated string source_ranges = 4;
        repeated string destination_ranges = 5;
        string action = 6;
        string direction = 7;
    }
    repeated ACLRule rules = 7;
    map<string, string> labels = 8;
    string project = 9;
    string last_sync_time = 10;
    string self_link = 11;
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
}


message SecurityGroup {
    string provider = 1;
    string id = 2;
    string name = 3;
    string vpc_id = 4;
    string region = 5;
    string account_id = 6;
    message SecurityGroupRule {
        string protocol = 1;
        string port_range = 2;
        repeated string source = 3;
        string direction = 4;
    }
    repeated SecurityGroupRule rules = 7;
    map<string, string> labels = 8;
    string project = 9;

    string last_sync_time = 10;
    string self_link = 11;
    repeated string attached_running_instances = 12;
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
}


message RouteTable {
    string provider = 1;
    string id = 2;
    string name = 3;
    string vpc_id = 4;
    string region = 5;
    string account_id = 6;
    message Route {
        string destination = 1;
        string target = 2;
        string status = 3;
    }
    repeated Route routes = 7;
    map<string, string> labels = 8;
    string project = 9;

    string last_sync_time = 10;
    string self_link = 11;
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;


}

message Router {
    string id = 1;
    string name = 2;
    string provider = 3;
    string region = 4;
    string vpc_id = 5;
    string state = 6;
    uint32 asn = 7;
    string advertised_range = 8;
    string advertised_group = 9;
    string vpn_type = 10;
    string subnet_id = 11;
    map<string, string> labels = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    string account_id = 15;
    string project = 16;
    string last_sync_time = 17;
    map<string, string> additional_properties = 18;
    string self_link = 19;
  }

  message NATGateway {
    string id = 1;
    string name = 2;
    string provider = 3;
    string account_id = 4;
    string vpc_id = 5;
    string region = 6;
    string state = 7;
    string public_ip = 8;
    string private_ip = 9;
    string subnet_id = 10;
    string project = 11;

    map<string, string> labels = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    string last_sync_time = 15;
    map<string, string> additional_properties = 16;
    string self_link = 17;
  }

  message IGW {
    string id = 1;
    string name = 2;
    string provider = 3;
    string account_id = 4;
    string attached_vpc_id = 5; // 
    string region = 6; // VPC Region
    string state = 7;
    string project = 8;

    map<string, string> labels = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    string last_sync_time = 14;
    string self_link = 15;
  }

  message VPCEndpoint {
    string id = 1;
    string name = 2;
    string provider = 3;
    string account_id = 4;
    string vpc_id = 5; // 
    string region = 6; // VPC Region
    string state = 7;
    string type = 8;
    string project = 9;

    string service_name = 10;
    string route_table_ids = 11; //comma separated subnet ids
    string subnet_ids = 12; //comma separated route table ids
    map<string, string> labels = 13;
    google.protobuf.Timestamp created_at = 14;
    google.protobuf.Timestamp updated_at = 15;
    string last_sync_time = 16;
    string self_link = 17;
  }

  message PublicIP {
    string id = 1;
    string type = 2;
    string provider = 3;
    string account_id = 4;
    string vpc_id = 5; //
    string region = 6; 
    string public_ip = 7;
    string instance_id = 8; 
    string private_ip = 9;
    string byoip = 10;
    string project = 11;

    map<string, string> labels = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    string last_sync_time = 15;
    string self_link = 16;
  }


  // Kubernetes 

  message Cluster {
    string name = 1;
    string full_name = 2;
    string arn = 3;
    string vpc_id = 4;
    string region = 5;
    string project = 6;
    map<string, string> labels = 7;
    string provider = 10;
    string account_id = 11;
    string id = 12;
    string last_sync_time = 13;
    string self_link = 14;
    google.protobuf.Timestamp created_at = 17;
    google.protobuf.Timestamp updated_at = 18;
}

message Node {
    string cluster = 1;
    string name = 2;
    string namespace = 3;
    repeated string addresses = 4;
    string project = 5;

    string last_sync_time = 6;
    string self_link = 7;

}

message Namespace {
    string cluster = 1;
    string name = 2;
    map<string, string> labels = 3;
    string project = 4;
    string last_sync_time = 5;
    string self_link = 6;
}

message Pod {
    string cluster = 1;
    string namespace = 2;
    string name = 3;
    string ip = 4;
    map<string, string> labels = 5;
    string state = 6;
    string project = 7;
    string last_sync_time = 8;
    string self_link = 9;
}

message K8sService {
    string cluster = 1;
    string namespace = 2;
    string name = 3;
    message Ingress {
        string hostname = 1;
        string IP = 2;
        repeated string ports = 3;
    }
    repeated Ingress ingresses = 4;
    map<string, string> labels = 8;
    string type = 9;
    string project = 10;
    string last_sync_time = 11;
    string self_link = 12;
}